kubernetes/apps/kubeflow/core/ingress/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: kubeflow-to-istio
  namespace: istio-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: kubeflow
  to:
    - group: ""
      kind: Service
      name: istio-ingressgateway
