kubernetes/apps/kubeflow/core/ingress/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubeflow
  namespace: istio-system
spec:
  hostnames:
    - kubeflow.goyangi.cloud
  rules:
    - parentRefs:
        - name: internal
          namespace: kube-system
          sectionName: https
      rules:
        - backendRefs:
            - name: istio-ingressgateway
              port: 80
