kubernetes/apps/kubeflow/core/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeflow
spec:
  ingressClassName: internal
  rules:
    - host: kubeflow.goyangi.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
